--- a/index.html
+++ b/index.html
@@ -171,4 +171,271 @@
   }
 
   // Convert a wall-clock time in a specific IANA timezone into a real Date (UTC instant).
-  function zonedTimeToDat
+  function zonedTimeToDate({dateStr, timeStr, timeZone}){
+    const [Y, M, D] = dateStr.split("-").map(Number);
+    const [hh, mm] = timeStr.split(":").map(Number);
+    const utcGuess = new Date(Date.UTC(Y, M - 1, D, hh, mm, 0));
+    const wall = formatInTZ(utcGuess, timeZone);
+    const [wallDate, wallTime] = wall.split(" ");
+    const [wY, wM, wD] = wallDate.split("-").map(Number);
+    const [wH, wMin] = wallTime.split(":").map(Number);
+
+    const intended = (Y*525600) + (M*43200) + (D*1440) + (hh*60) + mm;
+    const guessed   = (wY*525600) + (wM*43200) + (wD*1440) + (wH*60) + wMin;
+    const deltaMin = intended - guessed;
+
+    return new Date(utcGuess.getTime() + deltaMin * 60_000);
+  }
+
+  function msToClock(ms){
+    const sign = ms < 0 ? "-" : "";
+    ms = Math.abs(ms);
+    const totalSec = Math.floor(ms / 1000);
+    const sec = totalSec % 60;
+    const totalMin = Math.floor(totalSec / 60);
+    const min = totalMin % 60;
+    const totalHr = Math.floor(totalMin / 60);
+    const hr = totalHr % 24;
+    const days = Math.floor(totalHr / 24);
+    if (days > 0) return `${sign}${days}d ${pad2(hr)}:${pad2(min)}:${pad2(sec)}`;
+    return `${sign}${pad2(totalHr)}:${pad2(min)}:${pad2(sec)}`;
+  }
+
+  function setBadge(kind, text){
+    const b = $("badge");
+    b.classList.remove("ok","warn","err");
+    b.classList.add(kind);
+    b.textContent = text;
+  }
+
+  function loadState(){
+    try{
+      const raw = localStorage.getItem(STORAGE_KEY);
+      if(!raw) return {...defaults};
+      return {...defaults, ...JSON.parse(raw)};
+    }catch{
+      return {...defaults};
+    }
+  }
+  function saveState(s){ localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }
+
+  function applyToUI(s){
+    $("flight").value = s.flight;
+    $("route").value = s.route;
+    $("dep_iata").value = s.dep_iata;
+    $("arr_iata").value = s.arr_iata;
+    $("date").value = s.date;
+    $("tz").value = s.tz;
+    $("dep").value = s.dep;
+    $("arr").value = s.arr;
+    $("proxyBase").value = s.proxyBase;
+  }
+
+  function readFromUI(){
+    return {
+      flight: $("flight").value.trim() || defaults.flight,
+      route: $("route").value.trim() || defaults.route,
+      dep_iata: $("dep_iata").value.trim().toUpperCase() || defaults.dep_iata,
+      arr_iata: $("arr_iata").value.trim().toUpperCase() || defaults.arr_iata,
+      date: $("date").value || defaults.date,
+      tz: $("tz").value || defaults.tz,
+      dep: $("dep").value || defaults.dep,
+      arr: $("arr").value || defaults.arr,
+      proxyBase: $("proxyBase").value.trim() || ""
+    };
+  }
+
+  // ---- Live flight data state ----
+  let state = loadState();
+  applyToUI(state);
+
+  // live fields (if provided)
+  let live = {
+    status: null,                 // scheduled/active/landed/cancelled...
+    arr_time_iso: null,           // chosen "best" arrival time in ISO from API
+    arr_time_source: null,        // "actual" | "estimated" | "scheduled" | null
+    dep_time_iso: null,
+    dep_delay_min: null,
+    arr_delay_min: null,
+    lastUpdated: null,
+    error: null
+  };
+
+  function parseUAFlight(f){
+    // Aviationstack response structures can vary slightly by plan; use defensive access.
+    const flightStatus = f?.flight_status ?? null;
+
+    // Prefer actual > estimated > scheduled
+    const arrivalActual    = f?.arrival?.actual;
+    const arrivalEstimated = f?.arrival?.estimated;
+    const arrivalScheduled = f?.arrival?.scheduled;
+
+    const depActual    = f?.departure?.actual;
+    const depEstimated = f?.departure?.estimated;
+    const depScheduled = f?.departure?.scheduled;
+
+    const bestArr = arrivalActual || arrivalEstimated || arrivalScheduled || null;
+    const bestArrSource = arrivalActual ? "actual" : (arrivalEstimated ? "estimated" : (arrivalScheduled ? "scheduled" : null));
+
+    const bestDep = depActual || depEstimated || depScheduled || null;
+    const bestDepSource = depActual ? "actual" : (depEstimated ? "estimated" : (depScheduled ? "scheduled" : null));
+
+    const depDelay = f?.departure?.delay ?? null; // often minutes
+    const arrDelay = f?.arrival?.delay ?? null;
+
+    return {
+      flightStatus,
+      bestArr,
+      bestArrSource,
+      bestDep,
+      bestDepSource,
+      depDelay,
+      arrDelay
+    };
+  }
+
+  async function fetchLive(){
+    live.error = null;
+
+    const proxyBase = (state.proxyBase || "").replace(/\/+$/,"");
+    if(!proxyBase){
+      live.status = null;
+      live.arr_time_iso = null;
+      live.arr_time_source = null;
+      live.dep_time_iso = null;
+      live.lastUpdated = null;
+      $("lastLive").textContent = "No live data (set Worker URL)";
+      return;
+    }
+
+    const params = new URLSearchParams({
+      flight: state.flight,
+      date: state.date,
+      dep_iata: state.dep_iata,
+      arr_iata: state.arr_iata
+    });
+
+    try{
+      const r = await fetch(`${proxyBase}/flight?${params.toString()}`, { cache: "no-store" });
+      if(!r.ok){
+        const t = await r.text().catch(()=> "");
+        throw new Error(`Proxy HTTP ${r.status} ${t}`.slice(0, 250));
+      }
+      const data = await r.json();
+
+      if(!data?.ok){
+        throw new Error(data?.error || "Unknown live error");
+      }
+
+      const parsed = parseUAFlight(data.flight);
+
+      live.status = parsed.flightStatus;
+      live.arr_time_iso = parsed.bestArr;
+      live.arr_time_source = parsed.bestArrSource;
+      live.dep_time_iso = parsed.bestDep;
+      live.dep_delay_min = parsed.depDelay;
+      live.arr_delay_min = parsed.arrDelay;
+      live.lastUpdated = new Date();
+      $("lastLive").textContent = formatInTZ(live.lastUpdated, state.tz);
+    }catch(e){
+      live.error = String(e?.message || e);
+      $("lastLive").textContent = `Live error: ${live.error}`;
+    }
+  }
+
+  function tick(){
+    const now = new Date();
+    $("nowText").textContent = formatInTZ(now, state.tz);
+
+    // Scheduled fallback times (wall clock -> Date)
+    const scheduledArr = zonedTimeToDate({dateStr: state.date, timeStr: state.arr, timeZone: state.tz});
+    const scheduledDep = zonedTimeToDate({dateStr: state.date, timeStr: state.dep, timeZone: state.tz});
+
+    // Choose target arrival time:
+    // If live arrival exists (actual/estimated/scheduled from API), use it. Else use scheduled input.
+    let targetArrDate = scheduledArr;
+    let targetUsed = "scheduled (manual)";
+    if (live.arr_time_iso){
+      const dt = new Date(live.arr_time_iso);
+      if (!Number.isNaN(dt.getTime())){
+        targetArrDate = dt;
+        targetUsed = `${live.arr_time_source} (live)`;
+      }
+    }
+
+    const remaining = targetArrDate.getTime() - now.getTime();
+
+    $("targetUsed").textContent = targetUsed;
+    $("arrStamp").textContent = `${formatInTZ(targetArrDate, state.tz)} (${state.tz})`;
+    $("remainStamp").textContent = msToClock(remaining);
+
+    const title = `${state.flight} • ${state.route}`;
+    document.title = `The Court Report — ${msToClock(remaining)} to arrival`;
+
+    // Decide display status/badge
+    const fs = (live.status || "").toLowerCase();
+    const hasLive = !!live.arr_time_iso || !!live.status;
+
+    if (remaining > 0){
+      $("countdown").textContent = msToClock(remaining);
+
+      if (!hasLive){
+        setBadge("ok", "Scheduled");
+        $("status").textContent = `${title} — Counting down to scheduled arrival ${state.arr}. (Add Worker URL for live tracking.)`;
+      } else if (fs === "landed"){
+        setBadge("err", "Landed (live)");
+        $("status").textContent = `${title} — Status: landed. Arrival time shown is ${targetUsed}.`;
+      } else if (fs === "active"){
+        setBadge("warn", "En route (live)");
+        $("status").textContent = `${title} — Status: active. Arrival target: ${targetUsed}.`;
+      } else if (fs === "cancelled"){
+        setBadge("err", "Cancelled (live)");
+        $("status").textContent = `${title} — Status: cancelled.`;
+      } else {
+        setBadge("ok", `${live.status ? (live.status + " (live)") : "Live"}`);
+        const delayBits = [];
+        if (typeof live.dep_delay_min === "number") delayBits.push(`dep delay: ${live.dep_delay_min}m`);
+        if (typeof live.arr_delay_min === "number") delayBits.push(`arr delay: ${live.arr_delay_min}m`);
+        const delayText = delayBits.length ? ` (${delayBits.join(", ")})` : "";
+        $("status").textContent = `${title} — Status: ${live.status || "unknown"}. Arrival target: ${targetUsed}${delayText}.`;
+      }
+    } else {
+      $("countdown").textContent = "Arrived (target time passed)";
+      setBadge("err", hasLive ? "Arrival passed (live)" : "Arrival passed (scheduled)");
+      const over = msToClock(-remaining);
+      $("status").textContent = `${title} — Arrival target passed by ${over}.`;
+    }
+
+    // small hint if live errors
+    if (live.error){
+      $("status").textContent += ` Live update error: ${live.error}`;
+    }
+  }
+
+  // Buttons
+  $("saveBtn").addEventListener("click", async () => {
+    state = readFromUI();
+    saveState(state);
+    await fetchLive();
+    tick();
+  });
+
+  $("resetBtn").addEventListener("click", async () => {
+    state = {...defaults};
+    saveState(state);
+    applyToUI(state);
+    await fetchLive();
+    tick();
+  });
+
+  // Start timers
+  tick();
+  setInterval(tick, 1000);
+
+  // Live refresh every 60 seconds
+  fetchLive().then(tick);
+  setInterval(() => fetchLive().then(tick), 60_000);
+})();
+</script>
+</body>
+</html>
