--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ tick();
 setInterval(tick,1000);
 setInterval(fetchLive,60000);
 </script>
-
+  
+//image bouncer code:---------------------------------
+  
   <style>
   #bouncer{
     position:fixed;
@@ -262,6 +264,8 @@ setInterval(fetchLive,60000);
   setTimeout(() => { img.remove(); }, 12000);
 })();
 </script>
-
+  
+// end image bouncer code ------------------------
+  
 </body>
 </html>
