--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@ button{cursor:pointer;font-weight:600;background:rgba(59,130,246,.2)}
 button:hover{background:rgba(59,130,246,.3)}
 .grid{display:grid;gap:12px}
 @media(min-width:760px){.grid{grid-template-columns:1fr 1fr}}
-.big{
-  font-size:44px;
-  font-weight:900;
-  margin:16px 0 6px;
-}
+.big{font-size:44px;font-weight:900;margin:16px 0 6px}
 .status{color:var(--muted)}
 .badge{
   padding:6px 10px;
@@ -55,16 +51,28 @@ button:hover{background:rgba(59,130,246,.3)}
   font-weight:700;
 }
 .ok{color:var(--ok)}
-.warn{color:var(--warn)}
 .err{color:var(--err)}
 .kv{display:flex;justify-content:space-between;font-size:13px;color:var(--muted)}
 .kv b{color:var(--text)}
 .footer{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
 .mono{font-family:ui-monospace,Menlo,monospace;font-size:12px}
+
+/* --- BOUNCER IMAGE STYLE --- */
+#bouncer{
+  position:fixed;
+  width:120px;
+  height:auto;
+  z-index:9999;
+  pointer-events:none;
+  opacity:0.95;
+  filter: drop-shadow(0 10px 18px rgba(0,0,0,.45));
+  will-change: transform;
+}
 </style>
 </head>
 
 <body>
+
 <div class="wrap">
 <div class="card">
 
@@ -74,30 +82,12 @@ button:hover{background:rgba(59,130,246,.3)}
 <span id="badge" class="badge ok">Scheduled</span>
 
 <div class="grid" style="margin-top:12px">
-  <div>
-    <label>Flight</label>
-    <input id="flight" value="UA1768">
-  </div>
-  <div>
-    <label>Route</label>
-    <input id="route" value="SFO → BUR">
-  </div>
-  <div>
-    <label>Departure IATA</label>
-    <input id="dep_iata" value="SFO">
-  </div>
-  <div>
-    <label>Arrival IATA</label>
-    <input id="arr_iata" value="BUR">
-  </div>
-  <div>
-    <label>Scheduled Arrival (local)</label>
-    <input id="arr_time" type="time" value="12:08">
-  </div>
-  <div>
-    <label>Date</label>
-    <input id="date" type="date" value="2026-01-09">
-  </div>
+  <div><label>Flight</label><input id="flight" value="UA1768"></div>
+  <div><label>Route</label><input id="route" value="SFO → BUR"></div>
+  <div><label>Departure IATA</label><input id="dep_iata" value="SFO"></div>
+  <div><label>Arrival IATA</label><input id="arr_iata" value="BUR"></div>
+  <div><label>Scheduled Arrival</label><input id="arr_time" type="time" value="12:08"></div>
+  <div><label>Date</label><input id="date" type="date" value="2026-01-09"></div>
   <div style="grid-column:1/-1">
     <label>Cloudflare Worker URL</label>
     <input id="proxy" value="https://court-report-flight-proxy.abram-g.workers.dev">
@@ -122,7 +112,11 @@ Live data via AirLabs • Updates every 60 seconds
 </div>
 </div>
 
+<!-- BOUNCER IMAGE -->
+<img id="bouncer" src="logo.png" alt="logo">
+
 <script>
+/* ===================== APP LOGIC ===================== */
 const $ = id => document.getElementById(id);
 
 let liveArrival = null;
@@ -158,9 +152,10 @@ function scheduledArrival(){
 }
 
 async function fetchLive(){
-  const url = `${$("proxy").value}/flight?flight=${$("flight").value}&dep_iata=${$("dep_iata").value}&arr_iata=${$("arr_iata").value}`;
   try{
-    const r = await fetch(url);
+    const r = await fetch(
+      `${$("proxy").value}/flight?flight=${$("flight").value}&dep_iata=${$("dep_iata").value}&arr_iata=${$("arr_iata").value}`
+    );
     const j = await r.json();
     if(j.ok && j.flight){
       const f = j.flight;
@@ -177,7 +172,6 @@ async function fetchLive(){
 function tick(){
   const now = new Date();
   let target = scheduledArrival();
-
   if(liveArrival){
     const d = new Date(liveArrival);
     if(!isNaN(d)) target = d;
@@ -200,106 +194,66 @@ function tick(){
   $("last_live").textContent = lastLive;
 }
 
+/* ===================== BOUNCER LOGIC ===================== */
+function initBouncer(){
+  const img = $("bouncer");
+  if(!img) return;
+
+  const DURATION_MS = 12000;
+  const MARGIN_X = 16;
+  const MARGIN_Y = 14;
+  const START_Y_PCT = 0.22;
+  const OVERSHOOT = 10;
+  const SETTLE_MS = 420;
+  const EASE = t => 1 - Math.pow(1 - t, 3);
+
+  const startX = -img.offsetWidth - 20;
+  const startY = window.innerHeight * START_Y_PCT;
+
+  const dockXY = () => ({
+    x: window.innerWidth - img.offsetWidth - MARGIN_X,
+    y: MARGIN_Y
+  });
+
+  const start = performance.now();
+  let docked = false;
+
+  function step(now){
+    if(docked) return;
+    const t = Math.min(1, (now - start) / DURATION_MS);
+    const e = EASE(t);
+
+    const {x:dx, y:dy} = dockXY();
+    const x = startX + (dx - startX) * e;
+    const y = startY + (dy - startY) * e;
+
+    img.style.transform = `translate(${x}px, ${y}px)`;
+
+    if(t < 1){
+      requestAnimationFrame(step);
+    }else{
+      docked = true;
+      img.animate([
+        { transform:`translate(${dx-OVERSHOOT}px,${dy-OVERSHOOT}px)` },
+        { transform:`translate(${dx}px,${dy}px)` }
+      ],{
+        duration:SETTLE_MS,
+        easing:"cubic-bezier(.34,1.56,.64,1)",
+        fill:"forwards"
+      });
+    }
+  }
+  requestAnimationFrame(step);
+}
+
+/* ===================== INIT ===================== */
 load();
 fetchLive();
 tick();
 setInterval(tick,1000);
 setInterval(fetchLive,60000);
-
-<!-- image float + dock (with tiny bounce) -->
-<style>
-  #bouncer{
-    position:fixed;
-    width:120px;
-    height:auto;
-    z-index:9999;
-    pointer-events:none;
-    opacity:0.95;
-    filter: drop-shadow(0 10px 18px rgba(0,0,0,.45));
-    will-change: transform;
-  }
-</style>
-
-<img id="bouncer" src="logo.png" alt="logo" />
-
-<script>
-(() => {
-  const img = document.getElementById("bouncer");
-  if(!img) return;
-
-  // --- Tunables ---
-  const DURATION_MS = 12000;   // float time across screen
-  const MARGIN_X = 16;         // right margin
-  const MARGIN_Y = 14;         // top margin
-  const START_Y_PCT = 0.22;    // starting vertical position (0-1)
-  const OVERSHOOT = 10;        // px overshoot for bounce
-  const SETTLE_MS = 420;       // how fast it settles
-  const EASE = (t) => 1 - Math.pow(1 - t, 3); // easeOutCubic
-
-  function onReady(fn){
-    if (img.complete && img.naturalWidth) fn();
-    else img.addEventListener("load", fn, { once:true });
-  }
-
-  onReady(() => {
-    const w = img.offsetWidth || 120;
-
-    const startX = -w - 20; // off-screen left
-    const startY = Math.round(window.innerHeight * START_Y_PCT);
-
-    function dockXY(){
-      return {
-        x: window.innerWidth - w - MARGIN_X,
-        y: MARGIN_Y
-      };
-    }
-
-    const start = performance.now();
-    let docked = false;
-
-    function floatStep(now){
-      if (docked) return;
-
-      const t = Math.min(1, (now - start) / DURATION_MS);
-      const e = EASE(t);
-
-      const { x: endX, y: endY } = dockXY();
-      const x = startX + (endX - startX) * e;
-      const y = startY + (endY - startY) * e;
-
-      img.style.transform = `translate(${x}px, ${y}px)`;
-
-      if (t < 1){
-        requestAnimationFrame(floatStep);
-      } else {
-        docked = true;
-        bounceToDock();
-      }
-    }
-
-    function bounceToDock(){
-      const { x, y } = dockXY();
-      img.animate([
-        { transform: `translate(${x - OVERSHOOT}px, ${y - OVERSHOOT}px)` },
-        { transform: `translate(${x}px, ${y}px)` }
-      ], {
-        duration: SETTLE_MS,
-        easing: "cubic-bezier(.34,1.56,.64,1)",
-        fill: "forwards"
-      });
-    }
-
-    requestAnimationFrame(floatStep);
-
-    window.addEventListener("resize", () => {
-      if (!docked) return;
-      const { x, y } = dockXY();
-      img.style.transform = `translate(${x}px, ${y}px)`;
-    });
-  });
-})();
+initBouncer();
 </script>
 
-  
 </body>
 </html>
