--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ button:hover{background:rgba(59,130,246,.3)}
 /* --- LOGO (FLOAT → DOCK) --- */
 #bouncer{
   position:fixed;
+  top:0;
+  left:0;
   width:120px;
   height:auto;
   z-index:9999;
